// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon after renders as expected 1`] = `
<span
  className="flex flex--center-cross"
>
  <span>
    Next
  </span>
  <span
    className="ml6"
  >
    <Icon
      name="chevron-right"
    />
  </span>
</span>
`;

exports[`icon before renders as expected 1`] = `
<span
  className="flex flex--center-cross"
>
  <span
    className="mr6"
  >
    <Icon
      name="clipboard"
    />
  </span>
  <span>
    Copy
  </span>
</span>
`;

exports[`icons on both sides, including a non-string one renders as expected 1`] = `
<span
  className="flex flex--center-cross"
>
  <span
    className="mr6"
  >
    <Icon
      name="check"
    />
  </span>
  <span>
    What
  </span>
  <span
    className="ml6"
  >
    <Icon
      name="github"
    />
  </span>
</span>
`;

exports[`inline flex parent renders as expected 1`] = `
<span
  className="inline-flex flex--center-cross"
>
  <span
    className="mr6"
  >
    <Icon
      name="polyline"
    />
  </span>
  <span>
    Inline!
  </span>
</span>
`;

exports[`large gap renders as expected 1`] = `
<span
  className="flex flex--center-cross"
>
  <span
    className="mr6"
  >
    <Icon
      name="check"
    />
  </span>
  <span>
    Done
  </span>
</span>
`;
